Let's give this thing a name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lexical Browser</title>
+    <title>Akoose Dictionary</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" >
@@ -23,7 +23,7 @@
     <!-- More templates -->
     <script type="text/x-handlebars" data-template-name="index">
         <div class="page homeSearch">
-            <h1>Dictionary</h1>
+            <h1>Akoose<br>Dictionary</h1>
             <div style="margin-top:2em;">
                 {{view Ember.TextField valueBinding="query" type="search"}}
             </div>
