--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script src="vendor/underscore-min.js"></script>
     <script src="vendor/handlebars-1.0.0-rc.3.js"></script>
     <script src="vendor/ember-1.0.0-rc.3.js"></script>
-    <script src="data/akoose_syn.js"></script>
+    <script src="data/Akoose_syn.js"></script>
      <script src="app.js"></script>
      
 </body>
