support epsilon and open o on Android 2.2.3

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <table class="table">
             {{#each controller.results}}
                 <tr>
-                    <td><strong>{{form}}</strong> - <small>{{sense.category}},</small> {{sense.gloss}}</td>
+                    <td><strong><span style="font-family:CharisSILB;">{{form}}</span></strong> <small>{{sense.category}}</small> /{{sense.gloss}}/</td>
                     </tr>
                 {{/each}}
             </table>
