--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    
+    <!-- Icons -->
+    <link rel="apple-touch-icon" href="img/logo/Icon-2x.png">
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- For responsive css -->
