--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <script type="text/x-handlebars" data-template-name="search">
         <div class="page homeSearch">
             {{view Ember.TextField valueBinding="query" type="search" action="search"}}
-            <button {{action "clear"}} class="btn">Clear</button>
-            {{#linkTo "index"}}Home{{/linkTo}}
+            <i {{action "clear"}} class="icon-remove-circle" style="margin-top:-3px; margin-left:-22px;"></i>
+            <!-- {{#linkTo "index"}}Home{{/linkTo}} -->
             <table class="table">
             {{#each controller.results}}
                 <tr>
