--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             {{view Ember.TextField valueBinding="query" type="search" action="search"}}
             <i {{action "clear"}} class="icon-remove-circle" style="margin-top:-3px; margin-left:-22px;"></i>
             <!-- {{#linkTo "index"}}Home{{/linkTo}} -->
+
+            <br />
+            {{#each controller.specialCharacters}}
+            <span {{action "append" ch}}>{{ch}}</span>
+            {{/each}}
+
             <table class="table">
             {{#each controller.results}}
                 <tr>
