--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html><!-- <html manifest="lexicalbrowser.manifest"> -->
 <head>
     <meta charset="utf-8">
     <title>Akoose Dictionary</title>
