--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             <i {{action "clear"}} class="icon-remove-circle" style="margin-top:-3px; margin-left:-22px;" onclick=""></i>
             <!-- {{#linkTo "index"}}Home{{/linkTo}} -->
 
-            <br />
-            {{#each controller.specialCharacters}}
-            <span {{action "append" ch}} onclick="">{{ch}}</span>
-            {{/each}}
+            <div class="specialFont">
+                {{#each controller.specialCharacters}}
+                <span {{action "append" ch}} onclick="">{{ch}}</span>
+                {{/each}}
+            </div>
 
             <table class="table">
             {{#each controller.results}}
