Pointer cursor for clickable special chars

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="specialFont">
                 {{#each controller.specialCharacters}}
-                <span {{action "append" .}} onclick="">{{.}}</span>
+                <span {{action "append" .}} onclick="" style="cursor:pointer">{{.}}</span>
                 {{/each}}
             </div>
 
