--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script type="text/x-handlebars" data-template-name="index">
         <div class="page homeSearch">
             {{view Ember.TextField valueBinding="query" type="search" action="search" id="search-font"}}
+            <i {{action "clear"}} class="icon-remove-circle" style="margin-top:-3px; margin-left:-22px;" onclick=""></i>
             <div class="specialFont">
                 {{#each controller.specialCharacters}}
                 <span {{action "append" .}} onclick="" style="cursor:pointer">{{.}}</span>
